add hapi test and fix bugs along the way
Signed-off-by: Valentin Tronkov <99957253+vtronkov@users.noreply.github.com>